# ferroml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.ralph  FerroML_Audit_Report.docx  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  PROMPT_build.md  PROMPT_plan.md  RALPH_LOOP.md  README.md  REPO_MAP.md  SECURITY.md  cliff.toml  deny.toml  docker-compose.ralph.yml  llms.txt  loop.bat  loop.sh  mutants.toml  ralph-docker.sh  ralph.ps1  ralph.sh  rust-toolchain.toml  setup-wsl.sh  setup_ralph.sh
ferroml-core/: Cargo.toml
ferroml-core/benches/: baseline.json  benchmarks.rs  gaussian_process.rs  gpu_benchmarks.rs  memory_benchmarks.rs  performance_optimizations.rs
ferroml-core/examples/: automl.rs  classification.rs  gradient_boosting.rs  linear_regression.rs  pipeline.rs
ferroml-core/fixtures/text_pipeline/: pipeline_logistic.json  pipeline_multinomialnb.json  tfidf_default.json  tfidf_nondefault.json
ferroml-core/fuzz/: Cargo.toml
ferroml-core/fuzz/fuzz_targets/: fuzz_onnx_model_loading.rs  fuzz_preprocessing_input_validation.rs  fuzz_preprocessing_scalers.rs  fuzz_serialization_bincode.rs  fuzz_serialization_json.rs  fuzz_serialization_msgpack.rs
ferroml-core/proptest-regressions/testing/: properties.txt
ferroml-core/src/: error.rs  lib.rs  linalg.rs  model_card.rs  recommend.rs  schema.rs  serialization.rs  simd.rs  sparse.rs  validation.rs
ferroml-core/src/automl/: ensemble.rs  fit.rs  metafeatures.rs  mod.rs  portfolio.rs  preprocessing.rs  time_budget.rs  transfer.rs  warmstart.rs
ferroml-core/src/clustering/: agglomerative.rs  dbscan.rs  diagnostics.rs  gmm.rs  hdbscan.rs  kmeans.rs  metrics.rs  mod.rs
ferroml-core/src/cv/: curves.rs  group.rs  kfold.rs  loo.rs  mod.rs  nested.rs  search.rs  stratified.rs  timeseries.rs
ferroml-core/src/datasets/: diabetes_data.inc  diabetes_targets.inc  loaders.rs  mmap.rs  mod.rs  toy.rs
ferroml-core/src/decomposition/: factor_analysis.rs  lda.rs  mod.rs  pca.rs  quadtree.rs  truncated_svd.rs  tsne.rs  vptree.rs
ferroml-core/src/ensemble/: bagging.rs  mod.rs  stacking.rs  voting.rs
ferroml-core/src/explainability/: h_statistic.rs  ice.rs  kernelshap.rs  mod.rs  partial_dependence.rs  permutation.rs  summary.rs  treeshap.rs
ferroml-core/src/gpu/: backend.rs  dispatch.rs  kernels.rs  mod.rs
ferroml-core/src/hpo/: bayesian.rs  mod.rs  samplers.rs  schedulers.rs  search_space.rs
ferroml-core/src/inference/: mod.rs  operators.rs  session.rs  tensor.rs
ferroml-core/src/metrics/: classification.rs  comparison.rs  mod.rs  probabilistic.rs  regression.rs
ferroml-core/src/models/: adaboost.rs  boosting.rs  calibration.rs  extra_trees.rs  forest.rs  gaussian_process.rs  hist_boosting.rs  isolation_forest.rs  isotonic.rs  knn.rs  linear.rs  lof.rs  logistic.rs  mod.rs  multioutput.rs  naive_bayes.rs  qda.rs  quantile.rs  regularized.rs  robust.rs  sgd.rs  svm.rs  traits.rs  tree.rs
ferroml-core/src/neural/: activations.rs  analysis.rs  classifier.rs  diagnostics.rs  layers.rs  mlp.rs  mod.rs  optimizers.rs  regressor.rs  uncertainty.rs
ferroml-core/src/onnx/: hist_boosting.rs  linear.rs  mod.rs  naive_bayes.rs  preprocessing.rs  protos.rs  sgd.rs  svm.rs  tree.rs
ferroml-core/src/pipeline/: mod.rs  text_pipeline.rs
ferroml-core/src/preprocessing/: count_vectorizer.rs  discretizers.rs  encoders.rs  imputers.rs  mod.rs  polynomial.rs  power.rs  quantile.rs  sampling.rs  scalers.rs  selection.rs  tfidf.rs  tfidf_vectorizer.rs
ferroml-core/src/stats/: bootstrap.rs  confidence.rs  diagnostics.rs  distributions.rs  effect_size.rs  hypothesis.rs  math.rs  mod.rs  multiple_testing.rs  power.rs
ferroml-core/src/testing/: assertions.rs  automl.rs  callbacks.rs  categorical.rs  checks.rs  cv_advanced.rs  drift.rs  ensemble_advanced.rs  explainability.rs  fairness.rs  gaussian_process.rs  gpu_fallback.rs  hpo.rs  incremental.rs  metrics.rs  metrics_custom.rs  mod.rs  multioutput.rs  mutation.rs  (+17 more)
ferroml-core/tests/: adversarial.rs  adversarial_models.rs  adversarial_preprocessing_metrics.rs  correctness.rs  correctness_clustering.rs  correctness_explainability.rs  correctness_neural.rs  correctness_preprocessing.rs  edge_cases.rs  integration.rs  integration_uci_datasets.rs  real_dataset_validation.rs  regression_baselines.rs  regression_guards.rs  regression_tests.rs  sklearn_comparison.py  sklearn_correctness.rs  vs_linfa.rs  vs_linfa_clustering.rs  vs_linfa_linear.rs  vs_linfa_naive_bayes.rs  vs_linfa_neighbors.rs  vs_linfa_svm.rs  vs_linfa_trees.rs
ferroml-python/: .coverage  Cargo.toml  README.md  pyproject.toml
ferroml-python/src/: anomaly.rs  array_utils.rs  automl.rs  calibration.rs  clustering.rs  cv.rs  datasets.rs  decomposition.rs  ensemble.rs  errors.rs  explainability.rs  gaussian_process.rs  hpo.rs  lib.rs  linear.rs  metrics.rs  model_card.rs  model_selection.rs  multioutput.rs  naive_bayes.rs  neighbors.rs  neural.rs  pandas_utils.rs  pickle.rs  pipeline.rs  polars_utils.rs  preprocessing.rs  recommend.rs  sparse_utils.rs  stats.rs  svm.rs  trees.rs
ferroml-python/tests/: PREPROCESSING_COMPARISON_REPORT.md  __init__.py  conftest.py  conftest_comparison.py  preprocessing_report.py  sklearn_preprocessing_comparison.py  test_anomaly.py  test_automl.py  test_automl_system.py  test_bagging_classifier.py  test_bagging_regressor.py  test_bindings_correctness.py  test_cli.py  test_clustering.py  test_comparison_edge_cases.py  test_comparison_linear.py  test_comparison_preprocessing.py  test_comparison_remaining.py  test_comparison_trees.py  test_comparison_unsupervised.py  test_count_vectorizer.py  test_cross_library_edge_cases.py  test_cv.py  test_decision_function.py  test_decomposition.py  test_docstrings.py  test_ensemble.py  test_errors.py  test_explainability.py  test_feature_importances_linear.py  test_frankenstein.py  test_gaussian_process.py  test_gmm.py  test_import.py  test_input_validation.py  test_kernel_shap.py  test_kernel_svm.py  test_linear.py  test_linear_svm.py  test_metrics.py  (+51 more)
(+455 files in other folders)
