[workspace]
resolver = "2"
members = [
    "ferroml-core",
    "ferroml-python",
]
# Default to ferroml-core only for builds/tests - ferroml-python requires Python dev environment
default-members = ["ferroml-core"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["FerroML Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/robertlupo1997/ferroml"
homepage = "https://github.com/robertlupo1997/ferroml"
documentation = "https://docs.rs/ferroml-core"
readme = "README.md"
description = "Statistically rigorous AutoML in Rust with Python bindings"
keywords = ["machine-learning", "automl", "statistics", "data-science"]
categories = ["science", "mathematics"]

[workspace.dependencies]
# Core numerical computing
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray-stats = "0.6"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
# Note: ndarray-linalg removed due to OpenBLAS requirement - using nalgebra for linalg instead

# Data processing
polars = { version = "0.46", features = ["lazy", "parquet", "json", "dtype-full"] }
arrow = "54"

# Statistics & probability
statrs = "0.18"              # Statistical distributions
rand = "0.9"
rand_distr = "0.5"
argmin = "0.10"              # Optimization algorithms
argmin-math = "0.4"

# Parallel processing
rayon = "1.10"
crossbeam = "0.8"
tokio = { version = "1", features = ["full"] }

# SIMD
wide = "0.7"                 # Portable SIMD operations

# Sparse matrices
sprs = "0.11"                # Sparse matrix operations (CSR/CSC)

# Memory mapping
memmap2 = "0.9"              # Memory-mapped files for large datasets

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.3"
prost = "0.13"               # Protocol buffers (for ONNX export)

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = "0.3"

# Python bindings
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
numpy = "0.24"               # NumPy interop
pyo3-polars = { version = "0.21", features = ["derive"] }  # Polars interop with derive for export module

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "thin"
