[package]
name = "ferroml-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core AutoML engine with statistical rigor"
readme = "../README.md"
keywords = ["machine-learning", "automl", "statistics", "data-science", "rust"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Numerical computing
ndarray.workspace = true
ndarray-stats.workspace = true
nalgebra.workspace = true

# Data
polars.workspace = true
arrow.workspace = true

# Statistics
statrs.workspace = true
rand.workspace = true
rand_distr.workspace = true
argmin.workspace = true
argmin-math.workspace = true

# Parallel
rayon.workspace = true
crossbeam.workspace = true

# SIMD (optional)
wide = { workspace = true, optional = true }

# Sparse matrices (optional)
sprs = { workspace = true, optional = true }

# Memory mapping
memmap2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rmp-serde.workspace = true
prost.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
proptest = "1.5"
tempfile = "3.15"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "linear_regression"
path = "examples/linear_regression.rs"

[[example]]
name = "classification"
path = "examples/classification.rs"

[[example]]
name = "pipeline"
path = "examples/pipeline.rs"

[[example]]
name = "automl"
path = "examples/automl.rs"

[[example]]
name = "gradient_boosting"
path = "examples/gradient_boosting.rs"

[features]
default = ["parallel", "onnx"]
parallel = []
simd = ["wide"]  # SIMD acceleration for distance calculations
sparse = ["sprs"]  # Native sparse matrix operations
gpu = []  # Future CUDA/Metal support
onnx = []  # ONNX export support

# docs.rs configuration
[package.metadata.docs.rs]
# Build documentation with all features enabled
all-features = true
# Document all feature flags
rustdoc-args = ["--cfg", "docsrs"]
# Targets to build docs for
targets = ["x86_64-unknown-linux-gnu"]
