[package]
name = "ferroml-core"
version.workspace = true
edition.workspace = true
rust-version = "1.75.0"  # MSRV - Minimum Supported Rust Version
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core AutoML engine with statistical rigor"
readme = "../README.md"
keywords = ["machine-learning", "automl", "statistics", "data-science", "rust"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Numerical computing
ndarray.workspace = true
ndarray-stats.workspace = true
nalgebra.workspace = true

# Data
polars.workspace = true
arrow.workspace = true

# Statistics
statrs.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_chacha = "0.9"
argmin.workspace = true
argmin-math.workspace = true

# Parallel
rayon.workspace = true
crossbeam.workspace = true

# SIMD (optional)
wide = { workspace = true, optional = true }

# GPU (optional)
wgpu = { version = "23", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

# Sparse matrices (optional)
sprs = { workspace = true, optional = true }

# Memory mapping
memmap2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rmp-serde.workspace = true
prost.workspace = true
crc32fast = "1.4"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
proptest = "1.5"
tempfile = "3.15"
test-case = "3.3"
rstest = "0.23"
dhat = "0.3"
memory-stats = "1.2"
serde_json = "1"
pollster = "0.4"

# Optional dependencies for advanced testing
[dependencies.ort]
version = "2.0.0-rc.11"
optional = true
default-features = false
features = ["half"]

[dependencies.faer]
version = "0.20"
optional = true

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "performance_optimizations"
harness = false

[[bench]]
name = "gpu_benchmarks"
harness = false
required-features = ["gpu"]

[[example]]
name = "linear_regression"
path = "examples/linear_regression.rs"

[[example]]
name = "classification"
path = "examples/classification.rs"

[[example]]
name = "pipeline"
path = "examples/pipeline.rs"

[[example]]
name = "automl"
path = "examples/automl.rs"

[[example]]
name = "gradient_boosting"
path = "examples/gradient_boosting.rs"

[features]
default = ["parallel", "onnx"]
parallel = []
simd = ["wide"]  # SIMD acceleration for distance calculations
sparse = ["sprs"]  # Native sparse matrix operations
onnx = []  # ONNX export support
onnx-validation = ["ort"]  # For ONNX round-trip testing
faer-backend = ["faer"]    # High-performance linear algebra
gpu = ["wgpu", "bytemuck", "pollster"]  # GPU acceleration via wgpu

# docs.rs configuration
[package.metadata.docs.rs]
# Build documentation with all features enabled
all-features = true
# Document all feature flags
rustdoc-args = ["--cfg", "docsrs"]
# Targets to build docs for
targets = ["x86_64-unknown-linux-gnu"]
