[package]
name = "ferroml-core-fuzz"
version = "0.0.0"
authors = ["FerroML Contributors"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.ferroml-core]
path = ".."
features = ["onnx"]

# For serialization fuzzing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.3"

# For ONNX fuzzing
prost = "0.13"

# For ndarray-based input generation
ndarray = "0.16"

# Prevent this from interfacing with the workspace
[workspace]

[[bin]]
name = "fuzz_serialization_json"
path = "fuzz_targets/fuzz_serialization_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_serialization_msgpack"
path = "fuzz_targets/fuzz_serialization_msgpack.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_serialization_bincode"
path = "fuzz_targets/fuzz_serialization_bincode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_onnx_model_loading"
path = "fuzz_targets/fuzz_onnx_model_loading.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_preprocessing_scalers"
path = "fuzz_targets/fuzz_preprocessing_scalers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_preprocessing_input_validation"
path = "fuzz_targets/fuzz_preprocessing_input_validation.rs"
test = false
doc = false
bench = false
